--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -119,3 +119,17 @@ a{ color: #333;}
         content: '';
     }
 }
+
+// 加载样式修改
+.van-toast{
+    background-color: rgba(50,50,51,0); 
+    .van-loading--circular{
+        .van-loading__spinner{
+            width: 0.4rem;
+            height: 0.4rem;
+        }
+    }
+    .van-toast__text{
+        font-size: 0.14rem;
+    }
+}
